Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,7 @@ $^{4}$Department of Biological Sciences, University of Idaho, Moscow, ID, USA
 }
 % The Corresponding Author should be marked with an asterisk
 % Provide the exact contact address (this time including street name and city zip code) and email of the corresponding author
-\def\corrAuthor{Alexander lalejini}
+\def\corrAuthor{Alexander Lalejini}
 
 \def\corrEmail{amlalejini@gmail.com}
 
