--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -10,19 +10,23 @@
 \begin{abstract}
 
 \section{}
-Fluctuating environmental conditions are ubiquitous in natural systems, and the particular mechanisms that populations rely on to cope with environmental fluctuations profoundly influence subsequent evolutionary dynamics.
-Phenotypic plasticity, the ability of a single genotype to produce alternate phenotypes, allows organisms to dynamically adjust phenotypic expression in an environmentally dependent context.
+Fluctuating environmental conditions are ubiquitous in natural systems, and populations have evolved various strategies to cope with such fluctuations.
+The particular mechanisms that evolve profoundly influence subsequent evolutionary dynamics.
+One such mechanism is phenotypic plasticity, which is the ability of a single genotype to produce alternate phenotypes in an environmentally dependent context.
 Here, we use digital organisms (self-replicating computer programs) to investigate how adaptive phenotypic plasticity alters evolutionary dynamics and influences evolutionary outcomes in cyclically changing environments.
-Specifically, we 
-(1) examined the evolutionary histories of plastic and non-plastic populations to test whether adaptive plasticity promotes or constrains subsequent evolutionary change;
-(2) evaluated how adaptive plasticity influences fitness landscape exploration and exploitation by testing whether plastic populations are better able to evolve and then maintain novel traits;
-and (3) tested if the evolution of adaptive plasticity increases the potential for maladaptive traits to accumulate in evolving genomes.
-We find that populations with adaptive phenotypic plasticity evolve more slowly than non-plastic populations, which rely on genetic variation from \textit{de novo} mutations to continuously readapt to the environment.
-The non-plastic populations undergo more frequent selective sweeps and accumulate many more genetic changes.
-% , [finish listing big results]. 
-We find that phenotypic plasticity stabilizes populations against environmental fluctuations; whereas the repeated selective sweeps in non-plastic populations drive the loss of beneficial traits via deleterious hitchhiking.  
-As such, plastic populations are more likely to retain novel adaptive traits than their non-plastic counterparts. 
-In general, the evolution of adaptive phenotypic plasticity shifted evolutionary dynamics to be more similar to that of populations evolving in a static environment than to populations evolving in an identical fluctuating environment. 
+%Specifically, we 
+Specifically, we examined the evolutionary histories of both plastic populations and non-plastic populations to ask:
+(1) Does adaptive plasticity promote or constrain evolutionary change?
+(2) Are plastic populations better able to evolve and then maintain novel traits?
+And (3), how does adaptive plasticity affect the potential for maladaptive traits to accumulate in evolving genomes?
+% (1) examined the evolutionary histories of plastic and non-plastic populations to test whether adaptive plasticity promotes or constrains subsequent evolutionary change;
+% (2) evaluated how adaptive plasticity influences fitness landscape exploration and exploitation by testing whether plastic populations are better able to evolve and then maintain novel traits;
+% and (3) tested whether adaptive plasticity increased the potential for maladaptive traits to accumulate in evolving genomes.
+We find that populations with adaptive phenotypic plasticity undergo less evolutionary change than non-plastic populations, which must rely on genetic variation from \textit{de novo} mutations to continuously readapt to environmental fluctuations.
+Indeed, the non-plastic populations undergo more frequent selective sweeps and accumulate many more genetic changes.
+We find that the repeated selected sweeps in non-plastic populations drive the loss of beneficial traits via deleterious hitchhiking, whereas phenotypic plasticity can stabilize populations against environmental fluctuations.  
+This stabilization allows plastic populations to more easily retain novel adaptive traits than their non-plastic counterparts. 
+In general, the evolution of adaptive phenotypic plasticity shifted evolutionary dynamics to be more similar to that of populations evolving in a static environment than to non-plastic populations evolving in an identical fluctuating environment. 
 All natural environments subject populations to some form of change; our findings suggest that the stabilizing effect of phenotypic plasticity plays an important role in subsequent adaptive evolution.
 
 % [Indeed, the evolution of phenotypic plasticity shifted many dynamics to be more similar to populations evolving in a static environment than that of non-plastic populations evolving].
