--- a/tex/methods.tex
+++ b/tex/methods.tex
@@ -46,7 +46,7 @@ We define a phenotypically plastic organism as one that uses sensory information
 Phenotypic plasticity in Avida can be adaptive or non-adaptive for a given set of environments.
 Adaptive plasticity shifts net task expression closer to the optimum for the given environments.
 Non-adaptive plasticity changes task expression in either a neutral or deleterious way. 
-Optimal plasticity toggles tasks to always perfectly match the set of rewarded tasks for the given set of environments.
+In this work, optimal plasticity toggles tasks to always perfectly match the set of rewarded tasks for the given set of environments.
 
 % \vspace{0.7cm}
 \subsection{Experimental design}
