--- a/tex/results.tex
+++ b/tex/results.tex
@@ -114,7 +114,7 @@ Alternatively, the lower realized mutational robustness in NON-PLASTIC lineages 
 
 
 We analyzed the mutational robustness of representative genotypes by calculating the fraction of single-instruction mutations that change the phenotypic profile.
-We found that mutations to genotypes on NON-PLASTIC lineages are \textit{less} likely to result in a phenotypic change than mutations to genotypes on either STATIC or PLASTIC lineages (Figure \ref{fig:neighborhood-mutational-stability}).
+We found that mutations to representative genotypes on NON-PLASTIC lineages are \textit{less} likely to result in a phenotypic change than mutations to comparable genotypes on either STATIC or PLASTIC lineages (Figure \ref{fig:mutational-robustness}).
 These data provide evidence against NON-PLASTIC lineages engaging in a mutation-driven bet-hedging strategy, and instead, are consistent with the hypothesis that lower realized mutational robustness in the NON-PLASTIC treatment was due to survivorship bias.
 % @AML: Maybe one more sentence elaborating on implication of survivorship bias?
 
