--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -11,7 +11,7 @@
 Fluctuating environmental conditions are ubiquitous in natural systems. 
 Organisms have evolved a wide range of evolved strategies for coping with environmental change, such as 
 phenotypic plasticity \citep{ghalambor_adaptive_2007}, 
-bet hedging \citep{beaumont_experimental_2009}, 
+bet-hedging \citep{beaumont_experimental_2009}, 
 periodic migration \citep{winger_long_2019}, 
 and adaptive tracking \citep{barrett_adaptation_2008}.
 The particular coping mechanisms that evolve in fluctuating environments shift the course of subsequent evolution \citep{wennersten_population-level_2012,schaum_plasticity_2014}.
@@ -97,7 +97,7 @@ We build on this previous work, but we shift our focus from the evolutionary cau
 
 % - what we did -
 Each of our experiments are divided into two phases: in phase one, we precondition sets of founder organisms with differing plastic or non-plastic adaptations;
-in phase two, we examine the subsequent evolution of populations founded with organisms from phase one under specific environmental conditions. % [figure].
+in phase two, we examine the subsequent evolution of populations founded with organisms from phase one under specific environmental conditions (Figure \ref{fig:experimental-design}).
 First, we examine the evolutionary histories of phase two populations to test whether adaptive plasticity constrained subsequent genomic and phenotypic changes. 
 Next, we evaluate how adaptive plasticity influences exploration and exploitation by identifying how well populations produced by each type of founder are able to evolve and retain novel adaptive traits.
 Finally, we examine lineages to determine whether adaptive plasticity facilitated the accumulation of cryptic genetic variation that would prove deleterious when the environment changed. 
