Updates from Overleaf

--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -3,4 +3,9 @@
 \section*{Acknowledgments}
 
 % Preliminary experiments from which this work sprouted, ALife 2020 keynote
-% HPCC!
+% HPCC! I'm happy to whip something up, but I'm not sure if I can create something that isn't just copy-paste from another paper ~Austin
+
+We thank members of the MSU Digital Evolution Lab for helpful comments and suggestions on this work. 
+We also thank Luis Zaman whose keynote talk at the 2020 Artificial Life conference inspired the initial exploratory experiments from which this work blossomed. 
+Michigan State University provided computational resources through the Institute for Cyber-Enabled Research. 
+Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the NSF or MSU.
