--- a/tex/figures/metrics-definitions.tex
+++ b/tex/figures/metrics-definitions.tex
@@ -38,7 +38,7 @@ Phenotypic volatility
 }
 \newcommand{\PhenotypicVolatilityMetricDesc}{
 Number of instances where parent and offspring phenotypic profiles do not match along a lineage.
-Phenotypic volatility as defined here indicates the rate at which accumulated genetic changes actually change the phenotype along a lineage.
+% Phenotypic volatility as defined here indicates the rate at which accumulated genetic changes actually change the phenotype along a lineage.
 }
 
 \newcommand{\MutationalStabilityMetricName}{
