--- a/tex/figures/reaction-norms.tex
+++ b/tex/figures/reaction-norms.tex
@@ -1,10 +1,11 @@
 \begin{figure}[ht!]
     \centering
-    \includegraphics[width=\textwidth]{media/reaction-norms.pdf}
+    \includegraphics[width=0.65\textwidth]{media/reaction-norms.pdf}
     \caption{\small
     \textbf{Hypothetical reaction norms for genotypes that exhibit phenotypic variation.}
-    (a) through (d) show four hypothetical reaction norm scenarios for the environmental change described in (e).  
-    In (e), the environment changes from E$_1$ (in red) to E$_2$ (in blue), and the optimal phenotypes for environments E$_1$ and E$_2$ are different (O$_{\text{E}1}$ and O$_{\text{E}2}$, respectively).
+    (a) through (d) show four hypothetical reaction norm scenarios for two environments, E$_1$ (in red) to E$_2$ (in blue).  
+    The optimal phenotypes for environments E$_1$ and E$_2$ are different (O$_{\text{E}1}$ and O$_{\text{E}2}$, respectively).
+    % In (e), the environment changes from E$_1$ (in red) to E$_2$ (in blue), and the optimal phenotypes for environments E$_1$ and E$_2$ are different (O$_{\text{E}1}$ and O$_{\text{E}2}$, respectively).
     In each of the four reaction norm scenarios, populations are well-adapted to E$_1$.
     In (a), genotypes in the population are non-plastic, and as such, we would expect strong directional selection on mutations that move phenotypes toward O$_{\text{E}2}$ after the environment changes.
     In (b), genotypes in the population are adaptively plastic. 
