--- a/tex/funding.tex
+++ b/tex/funding.tex
@@ -3,8 +3,10 @@
 \section*{Funding}
 
 % This work was supported by funding from TODO
-TODO
 % AL: Michigan State University (UDF), DGE-1424871
-% AJF
+% AJF: U.S. National Science Foundation grant DEB-1655715 (Should check with Charles to make sure)
 % NG
 % CO
+
+This research was supported by the National Science Foundation (NSF) through the BEACON Center (DBI-0939454), a Graduate Research Fellowship to AL (DGE-1424871), and NSF Grant No. DEB-1655715 to CO (which supported AJF). 
+
