--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -8,20 +8,21 @@
 % -- Different mechanisms evolve to cope with fluctuating environments, and those mechanisms
 %    affect evolution. --
 %%%%%%%%%%%%%%%%%%%%%%
-Fluctuating environmental conditions are ubiquitous in natural systems. 
-Organisms have evolved a wide range of evolved strategies for coping with environmental change, such as 
-phenotypic plasticity \citep{ghalambor_adaptive_2007}, 
+%Fluctuating environmental conditions are ubiquitous in natural systems. 
+Natural organisms employ a wide range of evolved strategies for coping with environmental change, such as 
 bet-hedging \citep{beaumont_experimental_2009}, 
 periodic migration \citep{winger_long_2019}, 
-and adaptive tracking \citep{barrett_adaptation_2008}.
-The particular coping mechanisms that evolve in fluctuating environments shift the course of subsequent evolution \citep{wennersten_population-level_2012,schaum_plasticity_2014}.
-Identifying the mechanisms most likely to evolve and examining both the evolutionary constraints and opportunities associated with each is critical for us to understand and predict evolutionary outcomes in changing environments.
+adaptive tracking \citep{barrett_adaptation_2008}
+and phenotypic plasticity \citep{ghalambor_adaptive_2007}.
+The particular mechanisms that evolve in response to fluctuating environments will also shift the course of subsequent evolution \citep{wennersten_population-level_2012,schaum_plasticity_2014}.
+%Identifying the mechanisms most likely to evolve and examining both the evolutionary constraints and opportunities associated with each is critical for us to understand and predict evolutionary outcomes in changing environments.
+As such, if we are to understand or predict evolutionary outcomes we must be able to identify which mechanisms are most likely to evolve and what constraints and opportunities they impart on subsequent evolution.
 
 %%%%%%%%%%%%%%%%%%%%%%
 % -- We focus on how plasticity affects subsequent evolution. --
 %%%%%%%%%%%%%%%%%%%%%%
 In this work, we focus on phenotypic plasticity, which can be defined as the capacity for a single genotype to alter phenotypic expression in response to a change in its environment \citep{west-eberhard_developmental_2003}. 
-Phenotypic plasticity is controlled by genes whose expression is coupled to one or more abiotic or biotic environmental signals. 
+Phenotypic plasticity is controlled by genes whose expression is coupled to one or more environmental signals, which may be either biotic or abiotic. 
 For example, the sex ratio of the crustacean \textit{Gammarus duebeni} is modulated by changes in photoperiod and temperature \citep{dunn_two_2005}, and the reproductive output of some invertebrate species is heightened when infected with parasites to compensate for offspring loss \citep{chadwick_parasite-mediated_2005}. 
 In this study, we conducted digital evolution experiments to investigate how the evolution of adaptive phenotypic plasticity shifts the course of evolution in a cyclically changing environment.
 Specifically, we examined the effects of adaptive plasticity on subsequent genomic and phenotypic change, the capacity to evolve and then maintain novel traits, and the accumulation of deleterious alleles.
@@ -105,10 +106,11 @@ Finally, we examine lineages to determine whether adaptive plasticity facilitate
 %%%%%%%%%%%%%%%%%%%%%%
 % - Overview of findings -
 %%%%%%%%%%%%%%%%%%%%%%
-% TODO - incorporate architecture results
 We found that the evolution of adaptive plasticity reduced subsequent rates of evolutionary change in a cyclic environment.
 The non-plastic populations underwent more frequent selective sweeps and accumulated many more genetic changes over time, as non-plastic populations relied on genetic variation from \textit{de novo} mutations to continuously re-adapt to environmental changes. 
-We found that the evolution of adaptive phenotypic plasticity buffers populations against environmental fluctuations, whereas repeated selective sweeps in non-plastic populations drive the accumulation of deleterious mutations and the loss of secondary beneficial traits via deleterious hitchhiking.
+The evolution of adaptive phenotypic plasticity buffered populations against environmental fluctuations, whereas repeated selective sweeps in non-plastic populations drove the accumulation of deleterious mutations and the loss of secondary beneficial traits via deleterious hitchhiking.
 As such, adaptively plastic populations were better able to retain novel traits than their non-plastic counterparts.
+In general, the evolution of adaptive phenotypic plasticity shifted evolutionary dynamics to be more similar to that of populations evolving in a static environment than to non-plastic populations evolving in an identical fluctuating environment. 
+
 % We additionally found no evidence of delthat the evolution of adaptive phenotypic plasticity 
 % In addition, we did not find evidence that the evolution of adaptive plasticity resulted in increased rates of deleterious mutation accumulation. 
