--- a/tex/keywords.tex
+++ b/tex/keywords.tex
@@ -1,4 +1,4 @@
 %All article types: you may provide up to 8 keywords; at least 5 are mandatory.
 
 \tiny
- \keyFont{ \section{Keywords:} phenotypic plasticity, evolution, digital evolution, changing environments} 
+ \keyFont{ \section{Keywords:} phenotypic plasticity, experimental evolution, digital evolution, changing environments, Avida} 
