--- a/tex/results.tex
+++ b/tex/results.tex
@@ -173,7 +173,7 @@ Although the NON-PLASTIC lineages discovered more novel tasks, those lineages al
 \input{tex/figures/novel-tasks-rate-panel}
 
 % - Rates of exploration/exploitation -
-A larger number of generations elapsed in NON-PLASTIC populations than in PLASTIC or STATIC populations during our experiment \cite{supplemental_material}.
+A larger number of generations elapsed in NON-PLASTIC populations than in PLASTIC or STATIC populations during our experiment \citep{supplemental_material}.
 Are NON-PLASTIC lineages discovering and losing novel tasks more frequently than PLASTIC or STATIC lineages, or are our observations a result of differences in generational turnover?
 To answer this question, we converted the metrics of novel task discovery and novel task loss to rates by dividing each metric by the number of elapsed generations along the associated representative lineages.
 We found no significant difference in the frequency of novel task discovery between NON-PLASTIC and STATIC lineages, and we found that PLASTIC lineages had a lower frequency of novel task discovery than STATIC lineages (Figure~\ref{fig:complex-traits-rate}a).
@@ -202,7 +202,7 @@ As such, the losses of novel tasks in NON-PLASTIC lineages appear to be primaril
 %%%%%%
 
 Phenotypic plasticity allows for genetic variation to accumulate in genomic regions that are unexpressed, which could lead to the fixation of deleterious instructions in PLASTIC populations.
-However, in NON-PLASTIC lineages we observe a higher rate of novel task loss, indicating that they may be more susceptible to deleterious mutations (Figure \ref{fig:complex-traits-rate}).
+However, in NON-PLASTIC lineages we observe a higher rate of novel task loss, indicating that they may be more susceptible to deleterious mutations (Figure \ref{fig:complex-traits-rate}b).
 
 Therefore, in experiment phase 2C, we tested whether adaptive phenotypic plasticity can increase the incidence of deleterious task performance. 
 Specifically, we added an instruction that triggered a ``poisonous'' task and measured the number of times it was executed.
